[project]
name = "echo-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "fastapi>=0.115.12",
    "mcp[cli]>=1.6.0",
    "requests>=2.32.3",
    "selenium>=4.31.0",
    "uvicorn>=0.34.0",
    "webdriver-manager>=4.0.2",
]
